--- a/deno.json
+++ b/deno.json
@@ -1,9 +1,18 @@
 {
-  "name": "@aiwas/markdown-it-aozora",
+  "name": "@aiwas/markdown-it-aozora-ruby",
   "version": "0.1.0",
   "exports": "./mod.ts",
+  "publish": {
+    "include": [
+      "README.md",
+      "LICENSE",
+      "mod.ts"
+    ]
+  },
   "imports": {
-    "markdown-it": "https://esm.sh/markdown-it@14.1.0",
-    "@types/markdown-it": "https://esm.sh/@types/markdown-it@14.1.1"
+    "@std/assert": "jsr:@std/assert@^1.0.13",
+    "@std/testing": "jsr:@std/testing@^1.0.15",
+    "markdown-it": "npm:markdown-it@14.1.0",
+    "@types/markdown-it": "npm:@types/markdown-it@14.1.1"
   }
 }
