--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "name": "@aiwas/markdown-it-aozora-ruby",
   "version": "0.1.0",
+  "license": "MIT",
   "exports": "./mod.ts",
   "publish": {
     "include": [
